--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,4 @@
+@use './variables' as mixin;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 *,
@@ -7,4 +8,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  background-color: map-get(mixin.$colors, 'black');
 }
