--- a/src/components/Coins.module.scss
+++ b/src/components/Coins.module.scss
@@ -1,22 +1,45 @@
 @use '../styles/variables' as mixin;
 
-.search {
-  display: flex;
-  justify-content: center;
+// .search {
+//   display: flex;
+//   justify-content: center;
 
-  input {
-    border: none;
-  }
-}
+//   input {
+//     border: none;
+//     outline: none;
+//     height: 2rem;
+//   }
+// }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: map-get(mixin.$colors, $key: 'white');
-  position: relative;
+
+  .search {
+    display: flex;
+    margin: 1.5rem 0;
+    width: 100%;
+    justify-content: center;
+    input {
+      border: 1px solid lighten(map-get(mixin.$colors, 'black'), 20%);
+      background-color: map-get(mixin.$colors, 'black');
+      outline: none;
+      width: 100%;
+      height: 2rem;
+      max-width: 30rem;
+      color: white;
+    }
+    input:focus {
+      border: 1px solid white;
+    }
+  }
 
   .tableContent {
-    width: auto;
+    max-width: 65rem;
     border-collapse: collapse;
-    margin: 2.5rem auto;
+
     font-size: 1rem;
 
     thead tr {
