--- a/src/components/Coins.module.scss
+++ b/src/components/Coins.module.scss
@@ -1,16 +1,5 @@
 @use '../styles/variables' as mixin;
 
-// .search {
-//   display: flex;
-//   justify-content: center;
-
-//   input {
-//     border: none;
-//     outline: none;
-//     height: 2rem;
-//   }
-// }
-
 .container {
   display: flex;
   flex-direction: column;
@@ -22,14 +11,22 @@
     margin: 1.5rem 0;
     width: 100%;
     justify-content: center;
+
+    ::placeholder {
+      color: white;
+      text-align: center;
+      font-size: large;
+    }
     input {
       border: 1px solid lighten(map-get(mixin.$colors, 'black'), 20%);
       background-color: map-get(mixin.$colors, 'black');
       outline: none;
       width: 100%;
       height: 2rem;
-      max-width: 30rem;
-      color: white;
+      max-width: 60rem;
+      color: map-get(mixin.$colors, $key: 'white');
+      font-size: large;
+      text-align: center;
     }
     input:focus {
       border: 1px solid white;
@@ -37,9 +34,9 @@
   }
 
   .tableContent {
-    max-width: 65rem;
+    width: 100%;
+    max-width: 60rem;
     border-collapse: collapse;
-
     font-size: 1rem;
 
     thead tr {
