--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,11 @@
 $colors: (
   'black': #14161a,
-  'white': white,
+  'white': #ffffff,
   'test': aqua,
   'yellow': #eebc1c,
+  'positive': #8dc547,
+  'negative': #e15240,
+  'rank': #848ca2,
 );
 
 //media queries
