--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,13 +16,13 @@ $breakpoints: (
 );
 
 @mixin largerthanphone() {
-  @media (min-width: map-get($breakpoints, 'md')) {
+  @media screen and (min-width: map-get($breakpoints, 'md')) {
     @content;
   }
 }
 
 @mixin tableMedia() {
-  @media (max-width: map-get($breakpoints, 'sm')) {
+  @media screen and (max-width: map-get($breakpoints, 'sm')) {
     @content;
   }
 }
