--- a/src/components/Chart/LineChart.module.scss
+++ b/src/components/Chart/LineChart.module.scss
@@ -1,7 +1,8 @@
-@use '../../styles/variables' as mixin;
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 85%;
+  margin: 10rem 0;
 }
