--- a/src/components/CoinInfo/CoinInfo.module.scss
+++ b/src/components/CoinInfo/CoinInfo.module.scss
@@ -17,6 +17,7 @@
       font-weight: large;
       border-radius: 0.15rem;
       padding: 0.15rem;
+      margin-left: 0.8rem;
     }
     .logo {
       position: absolute;
